fixed mobile spacing of footer 3rd column

--- a/public/styles.css
+++ b/public/styles.css
@@ -5,3 +5,7 @@
 .fundBlocks {
   margin-bottom: 5%;
 }
+
+.leanfoot {
+  margin-bottom: 4%;
+}
